<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">


    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/distance" />

    <TextView
        android:id="@+id/text_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_distance"
        android:gravity="center"
        android:text="@string/total_kilometers" />

    <EditText
        android:inputType="numberDecimal"
        android:layout_marginTop="32dp"
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_distance"
        android:hint="@string/price" />

    <TextView

        android:id="@+id/text_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_price"
        android:gravity="center"
        android:text="@string/price_per_liter" />

    <EditText
        android:inputType="numberDecimal"
        android:layout_marginTop="32dp"
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_price"
        android:hint="@string/autonomy" />

    <TextView

        android:id="@+id/text_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_autonomy"
        android:gravity="center"
        android:text="@string/kilometers_per_liter" />

    <TextView
        android:id="@+id/text_total_cust"
        android:layout_marginTop="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spent"
        android:gravity="center"
        android:layout_below="@id/text_autonomy"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_total"
        android:textColor="#073CA5"
        android:gravity="center"
        android:textSize="32sp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:layout_below="@id/text_total_cust" />

    <Button
        android:backgroundTint="@color/teal_700"
        android:text="@string/calculate"
        android:layout_marginTop="32dp"
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_total" />

</RelativeLayout>